@@ -169,6 +169,14 @@ if @code{apps-menu-show-all} is set to 't, then: fields @code{Hidden},
 @code{NoDisplay}, @code{NotShowIn} and @code{OnlyShowIn} are ignored
 (Sawfish lists all existing menu-entries)
 
+@item Toggle-Or-Exec function [Christopher Bratusek]
+
+@code{toggle-or-exec} turns a given window into an drop-down-terminal like
+window. If no matching window is mapped, it starts the application instead,
+then the window is focussed, when @code{toggle-or-exec} is called while the
+pointer is inside the matching window, it will be hidden. Optionally the
+window may also be hidden when the pointer leaves it.
+
 @item Update of emacs major mode @file{sawfish.el} [Teika kazura]
 
 It is now distributed with Sawfish window manager. Improvements are:
