@@ -1,3 +1,8 @@
+2010-09-17  Christopher Brautsek <zanghar@freenet.de>
+	* lisp/sawfish/wm/commands/toggle-or-exec.jl: third command of
+	the or-exec family. Turns windows into drop-down-terminal like
+	windows. Check the files description for more infos.
+
 2010-09-16  Teika kazura <teika@lavabit.com>
 	* lisp/sawfish/wm/commands/grow-pack.jl
 	* lisp/sawfish/wm/ext/window-history.jl
